--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
   <li><a href="materials.html"><p>Materials</p></a></li>
   <li><a href="interiors.html"><p>Interiors</p></a></li>
   <li><a href="contact.html"><p>Contact Us</p></a></li>
-  <li><a href="faqs.html"><p>FAQs</p></a></li>
+  <li><a href="FAQs.html"><p>FAQs</p></a></li>
    </ul>
   </div>
   
